--- a/404.html
+++ b/404.html
@@ -1,8 +1,10 @@
 ---
 permalink: /404.html
-layout: base
+layout: site
 ---
-<h1>404</h1>
+<div class="container">
+  <h1>404</h1>
 
-<p><strong>Page not found :(</strong></p>
-<p>The requested page could not be found.</p>
+  <p><strong>Page not found :(</strong></p>
+  <p>The requested page could not be found.</p>
+</div>
