Add index header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 ---
 layout: site
 ---
-
-<h1>themetar's homepage</h1>
+<div class="title-block">
+  <header>
+    <h1>{{ site.title }}</h1>
+    <p>Web Developer, Programmer, Person</p>
+    <ul class="social-links">
+      <li><a target="_blank" rel="nooperer" href="https://github.com/themetar"></a></li>
+      <li><a target="_blank" rel="nooperer" href="https://www.linkedin.com/in/dimitar-apostolovski"></a></li>
+      <li><a target="_blank" rel="nooperer" href="https://twitter.com/themetar"></a></li>
+    </ul>
+  </header>
+  </div>
